@@ -11,9 +11,14 @@
 - Use A and D keys to rotate your spaceship
 - Press SPACE to shoot</br>
 ## Setup:
+###### <i>Version without music</i>
 1. Clone the repository <code> git clone https://github.com/wronkam/GalaxyConqueror.git </code> </br>
 2. Import Project in IntelliJ IDEA using pom.xml file </br>
 3. Compile and run App.java class </br>
+###### <i>Version with music (might generate some problems with compilation)</i>
+4. Additionaly to steps 1,2 and 3 go to App.java class and set canIConfigureJavaFXMedia variable to true</br>
+5. It might be helpful to add run configuration for App.java class and add the following line to VM options</br>
+<code>--module-path (your javafx path here)/lib --add-modules javafx.controls,javafx.fxml,javafx.media</code>
 ## Credits:
 Music: [PunchKey "Amanita"](https://soundcloud.com/punchkey/amanita?fbclid=IwAR3a_Xxm8Tuc_n3qFiwksO4AZ1O3HrRSCCAYc-HhXSBMLkNi9HMo6n-82Wk)
 ## Authors:
